# src/user/dto/create-user.dto.ts
@@ -1,1 +1,11 @@
-export class CreateUserDto {}
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class CreateUserDto {
+  @IsString({ message: 'Login must be a string.' })
+  @IsNotEmpty({ message: 'Login is required.' })
+  login: string;
+
+  @IsString({ message: 'Password must be a string.' })
+  @IsNotEmpty({ message: 'Password is required.' })
+  password: string;
+}
