# src/user/dto/update-user.dto.ts
@@ -1,4 +1,13 @@
 import { PartialType } from '@nestjs/mapped-types';
 import { CreateUserDto } from './create-user.dto';
+import { IsString, IsNotEmpty } from 'class-validator';
 
-export class UpdateUserDto extends PartialType(CreateUserDto) {}
+export class UpdateUserDto extends PartialType(CreateUserDto) {
+  @IsString({ message: 'Old password must be a string.' })
+  @IsNotEmpty({ message: 'Old password is required.' })
+  oldPassword: string;
+
+  @IsString({ message: 'New password must be a string.' })
+  @IsNotEmpty({ message: 'New password is required.' })
+  newPassword: string;
+}
